Add design document for virtio-rng support in KVM
Currently, Ganeti does not provide any interface for virtio-rng to KVM
guests. This document describes a proposed implementation of virtio-rng
support.

Signed-off-by: Nikos Kormpakis <nkorbb@gmail.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -732,6 +732,7 @@ docinput = \
 	doc/design-sync-rate-throttling.rst \
 	doc/design-systemd.rst \
 	doc/design-upgrade.rst \
+	doc/design-virtio-rng-support.rst \
 	doc/design-virtual-clusters.rst \
 	doc/design-x509-ca.rst \
 	doc/dev-codestyle.rst \
